[package]
name = "punch-clock"
version = "0.1.0"
authors = ["Søren Mortensen <soren@neros.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"

description = "Lightweight terminal time-tracking utility."
repository = "https://git.sr.ht/~nerosnm/punch-clock"
readme = "README.md"
keywords = ["time", "tracking", "punch", "clock"]
categories = ["command-line-utilities"]

# The file called LICENSE is a placeholder to shut up sourcehut. The real license files are 
# LICENSE-APACHE and LICENSE-MIT.
exclude = ["LICENSE"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "punch"
path = "src/main.rs"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
directories = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"
