[package]
name = "punch-clock"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"

description = "Lightweight terminal time-tracking utility."
homepage = "https://github.com/nerosnm/punch-clock"
repository = "https://github.com/nerosnm/punch-clock"
readme = "README.md"
keywords = ["time", "tracking", "punch", "clock"]
categories = ["command-line-utilities"]

[[bin]]
name = "punch"
path = "src/main.rs"

[dependencies]
chrono = { version = "^0.4", features = ["serde"] }
directories = "^2.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
structopt = "^0.3"
thiserror = "^1.0"
